--- a/docs/styles.css
+++ b/docs/styles.css
@@ -12,6 +12,9 @@ body {
   --darkgrey: #333;
   --lightgrey: #ddd;
   --grey: #999;
+
+  --textsize: 28px;
+  --duration: 0.7s;
 }
 
 .header {
@@ -24,13 +27,14 @@ body {
 }
 
 .logo__img {
- height: 30px;
+  height: 30px;
 }
 
 .jumbo {
   position: relative;
   height: 70vh;
-  background: var(--blue);
+  background: var(--orange);
+  overflow: hidden;
 }
 .jumbo__title {
   position: absolute;
@@ -68,7 +72,7 @@ body {
   bottom: -20px;
   left: 5px;
   z-index: 10;
-  animation: vibrate .1s infinite 2s, takeoff 1.8s ease-in 6s;
+  animation: vibrate 0.1s infinite 2s, takeoff 1.8s ease-in 6s;
   animation-fill-mode: forwards;
 }
 
@@ -81,10 +85,10 @@ body {
   position: absolute;
   bottom: 15px;
   left: -5px;
-  background: rgba(0,0,0,.2);
+  background: rgba(0, 0, 0, 0.2);
   border-radius: 50%;
-  box-shadow: 20px 40px 5px 5px rgba(0,0,0,.3),
-  10px 20px 5px 5px rgba(0,0,0,.4);
+  box-shadow: 20px 40px 5px 5px rgba(0, 0, 0, 0.3),
+    10px 20px 5px 5px rgba(0, 0, 0, 0.4);
   animation: scale 8s 1;
   animation-fill-mode: forwards;
   transform: scale(0);
@@ -122,7 +126,7 @@ body {
   left: 0;
   bottom: 0;
   top: 0;
-  background: rgba(0, 0, 0, .3);
+  background: rgba(0, 0, 0, 0.3);
   z-index: 1;
 }
 
@@ -139,8 +143,6 @@ body {
   text-shadow: 4px 4px 0px black, -4px -4px 0px black;
 }
 
-
-
 .section {
   padding: 48px 16px;
   text-align: center;
@@ -148,8 +150,10 @@ body {
 }
 .section__title {
   color: var(--blue);
+  font-size: 1.5rem;
 }
-.info__text, .info__location {
+.info__text,
+.info__location {
   color: var(--darkgrey);
   line-height: 1.5;
   font-size: 1.3rem;
@@ -206,7 +210,6 @@ body {
   padding-left: 20px;
 }
 
-
 .trainers {
   list-style: none;
   padding: 0;
@@ -239,6 +242,72 @@ body {
   line-height: 1.5;
 }
 
+.phone {
+  --orange: #e75112;
+  --blue: #105394;
+  background: url(http://www.mymockuptool.com/_Resources/Persistent/6/8/e/4/68e444a73fcbd5c896229add1ff00d92c27f7429/Apple%20iPhone%20X%20Silver-251x500.png)
+    center no-repeat;
+  width: 251px;
+  height: 500px;
+  position: absolute;
+  bottom: -80px;
+  right: 30px;
+  animation: phonetextsize var(--duration) infinite;
+}
+
+.phone:before {
+  content: '';
+  height: 500px;
+  width: 40px;
+  background: url(http://www.mymockuptool.com/_Resources/Persistent/6/8/e/4/68e444a73fcbd5c896229add1ff00d92c27f7429/Apple%20iPhone%20X%20Silver-251x500.png)
+    right no-repeat;
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 5;
+}
+
+.phone:after {
+  content: '';
+  position: absolute;
+  right: 25px;
+  bottom: 33px;
+  top: 32px;
+  left: 25px;
+  border-radius: 20px;
+  background: var(--blue);
+  z-index: 0;
+}
+
+.phone__inner {
+  position: absolute;
+  height: 240px;
+  position: absolute;
+  bottom: 204px;
+  left: 35px;
+  display: flex;
+  align-items: bottom;
+  z-index: 2;
+  width: 180px;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.phone__msg {
+  position: relative;
+  font-size: var(--textsize);
+  font-family: 'Arial', 'sans-serif';
+  font-weight: bold;
+  color: #fff;
+  white-space: nowrap;
+  height: 125px;
+}
+
+.phone__msg:after {
+  content: '';
+  margin-left: 5px;
+  animation: responsiveText var(--duration) infinite;
+}
 
 @keyframes vibrate {
   20% {
@@ -267,7 +336,6 @@ body {
   }
 }
 
-
 @keyframes scale {
   0% {
     transform: scale(0);
@@ -286,5 +354,53 @@ body {
   }
   100% {
     opacity: 0;
+  }
+}
+
+@keyframes responsiveText {
+  14.2% {
+    content: 'A';
+  }
+  28.4% {
+    content: 'AW';
+  }
+  42.6% {
+    content: 'AWE';
+  }
+  56.8% {
+    content: 'AWES';
+  }
+  71% {
+    content: 'AWESO';
+  }
+  85.2% {
+    content: 'AWESOM';
+  }
+  100% {
+    content: 'AWESOME';
+  }
+}
+
+@keyframes phonetextsize {
+  14.2% {
+    --textsize: 40px;
+  }
+  28.4% {
+    --textsize: 38px;
+  }
+  42.6% {
+    --textsize: 36px;
+  }
+  56.8% {
+    --textsize: 34px;
+  }
+  71% {
+    --textsize: 32px;
+  }
+  85.2% {
+    --textsize: 30px;
+  }
+  100% {
+    font-size: 28px;
   }
 }
