--- a/styles.2.css
+++ b/styles.2.css
@@ -4,23 +4,30 @@ body {
   font-family: 'arial';
 }
 
-XXXXXXXXX {
-  height: 64px;
+/* Styles de la toolbar */
+
+XXXXXXX {
   background: #0168ab;
+}
+
+XXXXXXX {
+  height: 64px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-right: 40px;
+  background: #f00;
 }
 
-XXXXXXXXX {
-  color: white;
+/* Liens de la toolbar */
+
+XXXXXXXX {
   text-decoration: none;
+  color: white;
 }
 
 /* Soulignement au passage du curseur */
 
-XXXXXXXXX {
+XXXXXXXX {
   text-decoration: underline;
 }
 
@@ -43,7 +50,7 @@ XXXXXXXXX {
 
 /* Styles des cartes */
 
-XXXXXXXXX {
+XXXXXXXX {
   width: 360px;
   height: 190px;
   box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
@@ -64,7 +71,7 @@ XXXXXXXXX {
 
 /* Titre des cartes */
 
-XXXXXXXXX {
+XXXXXXXX {
   margin: 0;
   font-size: 24px;
   font-weight: normal;
@@ -134,4 +141,8 @@ XXXXXXXXX {
   height: 56px;
   outline: none;
   box-shadow: 0 3px 5px -1px rgba(0, 0, 0, .2), 0 6px 10px 0 rgba(0, 0, 0, .14), 0 1px 18px 0 rgba(0, 0, 0, .12);
+}
+
+.toolbar.toolbar.toolbar {
+  background: fuchsia;
 }
