reorder exo number

--- a/styles.4.css
+++ b/styles.4.css
@@ -6,7 +6,7 @@ body {
 
 #toolbar {
   height: 64px;
-  background: #0168ab;
+  background: #eee;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -14,13 +14,10 @@ body {
 }
 
 .toolbar__link {
-  color: white;
   text-decoration: none;
 }
 
-.toolbar__link:hover {
-  text-decoration: underline;
-}
+.toolbar__link:hover {}
 
 .cards .card {
   margin-bottom: 40px;
@@ -46,6 +43,7 @@ body {
   transition: box-shadow 280ms cubic-bezier(.4, 0, .2, 1);
   display: block;
   position: relative;
+  padding: 24px;
   border-radius: 2px;
   margin: 30px auto;
   display: flex;
@@ -57,24 +55,28 @@ body {
   box-shadow: 0 11px 15px -7px rgba(0, 0, 0, 0.2), 0 24px 38px 3px rgba(0, 0, 0, 0.14), 0 9px 46px 8px rgba(0, 0, 0, 0.12);
 }
 
+.card__left {}
+
 .card__title {
   margin: 0;
   font-size: 24px;
   font-weight: normal;
-  color: #337ab7;
+  color: #ccc;
 }
 
 .card__subtitle {
   text-transform: uppercase;
-  color: #666;
+  color: #ccc;
   font-size: 14px;
+  margin: 0 0 20px;
   font-weight: normal;
 }
 
 .card__link {
   font-size: 14px;
-  color: #337ab7;
+  color: #ccc;
   text-decoration: none;
+  margin-bottom: 8px;
   display: block;
 }
 
@@ -89,10 +91,12 @@ body {
   font-size: 14px;
 }
 
-.card__item {}
+.card__item {
+  margin-bottom: 5px;
+}
 
 .card__itmLabel {
-  color: #666;
+  color: #999;
 }
 
 .card__itmLabel:after {
@@ -101,7 +105,7 @@ body {
 }
 
 .card__itemValue {
-  color: #337ab7;
+  color: #999;
   text-decoration: none;
 }
 
@@ -110,14 +114,14 @@ body {
   height: 128px;
   border-radius: 50%;
   display: block;
+  filter: grayscale(8);
 }
 
 .floatBtn {
   position: fixed;
   bottom: 30px;
   right: 30px;
-  color: white;
-  background: #ff4081;
+  background: #eee;
   border-radius: 50%;
   width: 56px;
   height: 56px;
