--- a/styles.3.css
+++ b/styles.3.css
@@ -1,9 +1,3 @@
-/*
-  tips 
-  blue: #0168ab
-  pink: #ff4081
-*/
-
 body {
   margin: 0;
   font-size: 16px;
@@ -12,7 +6,7 @@ body {
 
 #toolbar {
   height: 64px;
-  background: XXXXXX;
+  background: #0168ab;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -52,7 +46,6 @@ body {
   transition: box-shadow 280ms cubic-bezier(.4, 0, .2, 1);
   display: block;
   position: relative;
-  padding: 24px;
   border-radius: 2px;
   margin: 30px auto;
   display: flex;
@@ -63,8 +56,6 @@ body {
 .card:hover {
   box-shadow: 0 11px 15px -7px rgba(0, 0, 0, 0.2), 0 24px 38px 3px rgba(0, 0, 0, 0.14), 0 9px 46px 8px rgba(0, 0, 0, 0.12);
 }
-
-.card__left {}
 
 .card__title {
   margin: 0;
@@ -77,7 +68,6 @@ body {
   text-transform: uppercase;
   color: #666;
   font-size: 14px;
-  margin: 0 0 20px;
   font-weight: normal;
 }
 
@@ -85,7 +75,6 @@ body {
   font-size: 14px;
   color: #337ab7;
   text-decoration: none;
-  margin-bottom: 8px;
   display: block;
 }
 
@@ -100,9 +89,7 @@ body {
   font-size: 14px;
 }
 
-.card__item {
-  margin-bottom: 5px;
-}
+.card__item {}
 
 .card__itmLabel {
   color: #666;
@@ -127,10 +114,10 @@ body {
 
 .floatBtn {
   position: fixed;
-  bottom: XXXXXX;
-  right: XXXXXXX;
+  bottom: 30px;
+  right: 30px;
   color: white;
-  background: XXXXXXX;
+  background: #ff4081;
   border-radius: 50%;
   width: 56px;
   height: 56px;
