--- a/styles.6.css
+++ b/styles.6.css
@@ -30,6 +30,9 @@ body {
   .cards {
     max-width: 920px;
     margin: 40px auto;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-column-gap: 0;
   }
   .cards .card {
     margin: 0 auto 40px;
@@ -45,10 +48,10 @@ body {
   position: relative;
   padding: 24px;
   border-radius: 2px;
-}
-
-.card:hover {
-  box-shadow: 0 11px 15px -7px rgba(0, 0, 0, 0.2), 0 24px 38px 3px rgba(0, 0, 0, 0.14), 0 9px 46px 8px rgba(0, 0, 0, 0.12);
+  margin: 30px auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: top;
 }
 
 .card__left {}
@@ -113,6 +116,9 @@ body {
 }
 
 .floatBtn {
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
   color: white;
   background: #ff4081;
   border-radius: 50%;
