--- a/styles.4.css
+++ b/styles.4.css
@@ -17,6 +17,10 @@ body {
   text-decoration: none;
 }
 
+.toolbar__link:last-child::after {
+  content: " - exo4";
+}
+
 .toolbar__link:hover {}
 
 .cards .card {
@@ -54,8 +58,6 @@ body {
 .card:hover {
   box-shadow: 0 11px 15px -7px rgba(0, 0, 0, 0.2), 0 24px 38px 3px rgba(0, 0, 0, 0.14), 0 9px 46px 8px rgba(0, 0, 0, 0.12);
 }
-
-.card__left {}
 
 .card__title {
   margin: 0;
