--- a/styles.5.css
+++ b/styles.5.css
@@ -18,6 +18,10 @@ body {
   text-decoration: none;
 }
 
+.toolbar__link:last-child::after {
+  content: " - exo5";
+}
+
 .toolbar__link:hover {
   text-decoration: underline;
 }
