--- a/styles.7.css
+++ b/styles.7.css
@@ -24,6 +24,10 @@ body {
   text-decoration: none;
 }
 
+.toolbar__link:last-child::after {
+  content: " - exo7";
+}
+
 .toolbar__link:hover {
   text-decoration: underline;
 }
