--- a/styles.2.css
+++ b/styles.2.css
@@ -1,3 +1,7 @@
+/*
+  SELECTORS
+*/
+
 body {
   margin: 0;
   font-size: 16px;
@@ -39,19 +43,6 @@ XXXXXXXX {
   margin-bottom: 40px;
 }
 
-@media(min-width: 640px) {
-  .cards {
-    max-width: 920px;
-    margin: 40px auto;
-    display: grid;
-    grid-template-columns: 50% 50%;
-    grid-column-gap: 0;
-  }
-  .cards .card {
-    margin: 0 auto 40px;
-  }
-}
-
 /* Styles des cartes */
 
 XXXXXXXX {
@@ -67,10 +58,6 @@ XXXXXXXX {
   display: flex;
   justify-content: space-between;
   align-items: top;
-}
-
-.card:hover {
-  box-shadow: 0 11px 15px -7px rgba(0, 0, 0, 0.2), 0 24px 38px 3px rgba(0, 0, 0, 0.14), 0 9px 46px 8px rgba(0, 0, 0, 0.12);
 }
 
 /* Titre des cartes */
