--- a/styles.3.css
+++ b/styles.3.css
@@ -1,3 +1,7 @@
+/*
+  SPACING & MARGINS
+*/
+
 body {
   margin: 0;
   font-size: 16px;
@@ -55,10 +59,6 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: top;
-}
-
-.card:hover {
-  box-shadow: 0 11px 15px -7px rgba(0, 0, 0, 0.2), 0 24px 38px 3px rgba(0, 0, 0, 0.14), 0 9px 46px 8px rgba(0, 0, 0, 0.12);
 }
 
 .card__title {
