--- a/styles.6.css
+++ b/styles.6.css
@@ -1,3 +1,7 @@
+/*
+  RESPONSIVE
+*/
+
 body {
   margin: 0;
   font-size: 16px;
@@ -30,19 +34,6 @@ body {
   margin-bottom: 40px;
 }
 
-@media(min-width: 640px) {
-  .cards {
-    max-width: 920px;
-    margin: 40px auto;
-    display: grid;
-    grid-template-columns: 50% 50%;
-    grid-column-gap: 0;
-  }
-  .cards .card {
-    margin: 0 auto 40px;
-  }
-}
-
 .card {
   width: 360px;
   height: 190px;
@@ -58,7 +49,11 @@ body {
   align-items: top;
 }
 
-.card__left {}
+/*
+
+VOTRE REPONSE ICI :)
+
+*/
 
 .card__title {
   margin: 0;
